# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust/ohos_cargo_crate.gni")

ohos_cargo_crate("lib") {
  crate_name = "autocfg"

  # epoch = "1"
  crate_type = "rlib"

  visibility = [ "//third_party/rust/*" ]
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2015"
  module_output_extension = ".rlib"
  part_name = "rust_autocfg"
  subsystem_name = "thirdparty"
}
